--- a/nolu/core/includes/buttons/shared/styles/card_color.styles.yaml
+++ b/nolu/core/includes/buttons/shared/styles/card_color.styles.yaml
@@ -3,10 +3,10 @@ color: |
     const active = 'var(--nolu-color-active, rgb(22, 22, 22))';
     const inactive = 'var(--nolu-color-inactive, rgb(245, 245, 245))';
 
-    const onState = ['on', 'auto', 'home', 'active', 'enabled', 'heat', 'cool', 'open'];
-    const offState = ['off', 'unknown', 'unavailable', 'disabled', 'closed'];
+    const onState = ['on', 'auto', 'home', 'active', 'enabled', 'heat', 'cool', 'heat_cool', 'fan', 'open'];
+    const offState = ['off', 'unknown', 'unavailable', 'disabled', 'closed', 'not_home'];
 
-    return variables && variables.state && onState.some(state => variables.state.toLowerCase().includes(state)) 
+    return variables && variables.state && onState.some(state => variables.state.toLowerCase() === state) 
       ? active 
       : inactive;
   ]]]
