--- a/nolu/core/includes/buttons/shared/styles/card_ripple.styles.yaml
+++ b/nolu/core/includes/buttons/shared/styles/card_ripple.styles.yaml
@@ -3,10 +3,10 @@
     const active = 'var(--nolu-ripple-active, rgb(0, 0, 0))';
     const inactive = 'var(--nolu-ripple-inactive, rgba(255, 255, 255, 0.3))';
 
-    const onState = ['on', 'auto', 'home', 'active', 'enabled', 'heat', 'cool', 'open'];
-    const offState = ['off', 'unknown', 'unavailable', 'disabled', 'closed'];
+    const onState = ['on', 'auto', 'home', 'active', 'enabled', 'heat', 'cool', 'heat_cool', 'fan', 'open'];
+    const offState = ['off', 'unknown', 'unavailable', 'disabled', 'closed', 'not_home'];
     
-    return variables && variables.state && onState.some(state => variables.state.toLowerCase().includes(state))
+    return variables && variables.state && onState.some(state => variables.state.toLowerCase() === state)
       ? active 
       : inactive;
   ]]]
