--- a/nolu/core/includes/views/core_view.llg.yaml
+++ b/nolu/core/includes/views/core_view.llg.yaml
@@ -201,9 +201,15 @@
                             widget_name: {{ widget.name | default('No name') }}
                             widget_lock: {{ widget.lock | default(false) }}
                             widget_type: {{ widget.type }}
+
+                            {% if widget.show_last_changed is defined %}
+                            widget_show_last_changed: {{ widget.show_last_changed }}
+                            {% endif %}
+
                             {% if widget.icon is defined %}
                             widget_icon: {{ widget.icon }}
                             {% endif %}
+
                             {% if widget.template is defined %}
                             widget_template:
                               {% for template in widget.template %}
@@ -215,16 +221,18 @@
 
                         #################################################
                         #         ICONS
+                        # TODO: transform into include, however passing
+                        # lists is still an issue in lovelace_gen
                         #################################################
                         {% elif widget.type == 'icons' %}
-                        - type: custom:mod-card
+                        - type: 'custom:mod-card'
                           style:
                             .: |
                               :host {
                                 align-items: flex-start;
                                 display: flex;
                                 justify-content: flex-start;
-                                padding: 0 1.25rem !important;
+                                padding: 0rem !important;
                               }
                               #states {
                                 padding: 0;
@@ -239,31 +247,43 @@
                               }
                               #root > * {
                                 display: flex;
-                                flex: 1 1 auto;
+                                flex: 1 1 50%;
                                 margin: 0 !important;
                               }
+                              {# @media only screen
+                              and (min-width: 600px) {
+                                #root > * {
+                                  flex: 1 1 auto;
+                                }
+                              } #}
                               #root > mod-card:nth-child(1) {
                                 align-items: flex-start;
-                                justify-content: flex-start;
+                                justify-content: center;
                               }
                               #root > mod-card:nth-child(2) {
                                 align-items: flex-start;
-                                justify-content: flex-end;
+                                justify-content: center;
                               }
                               #root > mod-card:nth-child(3) {
                                 align-items: flex-end;
-                                justify-content: flex-start;
+                                justify-content: center;
                               }
                               #root > mod-card:nth-child(4) {
                                 align-items: flex-end;
-                                justify-content: flex-end;
+                                justify-content: center;
                               }
                           card:
-                            type: horizontal-stack
+                            type: 'horizontal-stack'
                             cards:
-
-                              # FIXME: couldn't use entities for some reason?
-                              {% for entity_item in widget.entity_list %}
+                              {% set total_icons = widget.icons_list | length %}
+                              {% set blank_items_amount = 4 - (total_icons | int) %}
+                              {% for n in range(blank_items_amount) %}
+                                {% set new_icons_list = widget.icons_list.append({ 
+                                  "type": "blank"
+                                }) %}
+                              {% endfor %}
+                              
+                              {% for icon_item in widget.icons_list %}
                                 {% if loop.index <= 4 %}
                               #################################################
                               #         ENTITY
@@ -279,46 +299,106 @@
                                       margin-right: 0 !important;
                                     }
                                 card:
-                                  type: vertical-stack
+                                  type: 'vertical-stack'
                                   cards:
+                                    {% if icon_item.type is defined and
+                                      icon_item.type == 'blank' %}
                                     #################################################
-                                    #         BUTTON
+                                    #         DUMMY ICON
                                     #################################################
-                                    - type: custom:button-card
-                                      entity: {{ entity_item.entity }}
-                                      name: {{ entity_item.name }}
-                                      icon: {{ entity_item.icon }}
-                                      {# variables:
-                                        active: >
-                                          [[[
-                                            return entity.state === 'on' ? true : false;
-                                          ]]]
-                                        iconColor: |
-                                          [[[
-                                            return 'rgb(255, 255, 255)';
-                                          ]]]
-                                        backgroundColorDefault: |
-                                          [[[
-                                            return 'rgb(2,0,36)';
-                                          ]]]
-                                        backgroundColorActive: |
-                                          [[[
-                                            return 'rgba(9,9,121)';
-                                          ]]]
-                                        backgroundGradientActive: |
-                                          [[[
-                                            return 'linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%)';
-                                          ]]]
-                                        backgroundGradientDefault: |
-                                          [[[
-                                            return 'linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%)';
-                                          ]]] #}
+                                    - !include
+                                      - includes/widgets/icon_dummy_widget.llg.yaml
+                                      - icon_item_type: {{ icon_item.type }}
+                                    {% else %}
+                                    #################################################
+                                    #         ICON BUTTON
+                                    #################################################
+                                    - type: 'custom:button-card'
+                                      {% if icon_item.entity is defined %}
+                                      entity: {{ icon_item.entity }}
+                                      {% endif %}
+
+                                      {% if icon_item.name is defined %}
+                                      name: {{ icon_item.name }}
+                                      {% endif %}
+
+                                      {% if icon_item.icon is defined %}
+                                      icon: {{ icon_item.icon }}
+                                      {% endif %}
+                                      
+                                      {% if icon_item.variables is defined %}
+                                      variables:
+                                        {% if icon_item.variables.icon_color is defined %}
+                                        icon_color: {{ icon_item.variables.icon_color }}
+                                        {% endif %}
+
+                                        {% if icon_item.variables.bg_color_default is defined %}
+                                        bg_color_default: {{ icon_item.variables.bg_color_default }}
+                                        {% endif %}
+
+                                        {% if icon_item.variables.bg_color_active is defined %}
+                                        bg_color_active: {{ icon_item.variables.bg_color_active }}
+                                        {% endif %}
+
+                                        {% if icon_item.variables.bg_gradient_default is defined %}
+                                        bg_gradient_default: {{ icon_item.variables.bg_gradient_default }}
+                                        {% endif %}
+
+                                        {% if icon_item.variables.bg_gradient_active is defined %}
+                                        bg_gradient_active: {{ icon_item.variables.bg_gradient_active }}
+                                        {% endif %}
+                                      {% endif %}
+
+                                      {% if icon_item.tap_action is defined %}
+                                      tap_action:
+                                        {% if icon_item.tap_action.action is defined %}
+                                        action: {{ icon_item.tap_action.action }}
+                                        {% endif %}
+
+                                        {% if icon_item.tap_action.entity is defined %}
+                                        entity: {{ icon_item.tap_action.entity }}
+                                        {% endif %}
+
+                                        {% if icon_item.tap_action.url_path is defined %}
+                                        url_path: {{ icon_item.tap_action.url_path }}
+                                        {% endif %}
+
+                                        {% if icon_item.tap_action.navigation_path is defined %}
+                                        navigation_path: {{ icon_item.tap_action.navigation_path }}
+                                        {% endif %}
+
+                                        {% if icon_item.tap_action.haptic is defined %}
+                                        haptic: {{ icon_item.tap_action.haptic }}
+                                        {% endif %}
+
+                                        {% if icon_item.tap_action.repeat is defined %}
+                                        repeat: {{ icon_item.tap_action.repeat }}
+                                        {% endif %}
+
+                                        {% if icon_item.tap_action.service is defined %}
+                                        service: {{ icon_item.tap_action.service }}
+                                        {% endif %}
+
+                                        # These are objects! TODO: below might not work and all
+                                        # keys should be defined separately
+                                        # check https://github.com/custom-cards/button-card#action
+                                        {% if icon_item.tap_action.service_data is defined %}
+                                        service_data: {{ icon_item.tap_action.service_data }}
+                                        {% endif %}
+
+                                        {% if icon_item.tap_action.confirmation is defined %}
+                                        confirmation: {{ icon_item.tap_action.confirmation }}
+                                        {% endif %}
+                                      {% endif %}
+                                      
                                       template:
                                         - 'app_icon_base'
+                                    {% endif %}
                                 {% endif %}
                               {% endfor %}
 
                         
+
                         #################################################
                         #         LIGHT
                         #################################################
@@ -364,7 +444,8 @@
                             cover: {{ widget.background.cover }}
                             {% endif %}
                           {% endif %}
-                          {% if widget.name %}
+                          
+                          {% if widget.name is defined %}
                           name: {{ widget.name }}
                           {% endif %}
                           template:
@@ -414,6 +495,9 @@
                             icon: true
                             source: true
                             info: true
+                            mute: true
+                            next: true
+                            prev: true
                           tap_action:
                             action: 'fire-dom-event'
                             browser_mod:
